@@ -2,11 +2,8 @@
 envlist = py26,py27,py32,py33,pypy
 
 [testenv]
-deps=unittest2
+deps=
 commands=python setup.py test -q
 
-[testenv:py32]
-deps=
-
-[testenv:py33]
-deps=
+[testenv:py26]
+deps=unittest2
