@@ -4,6 +4,8 @@ Changelog
 2.2 - unreleased
 ----------------
 
+- Break dependency on ``unittest2`` for Python 2.7. [icemac]
+
 
 2.1 - 2013-02-10
 ----------------
